fix: button overflow newsletter.sass

--- a/css/style.css
+++ b/css/style.css
@@ -877,7 +877,7 @@ template {
 .subscribe {
   position: relative;
   width: 351px;
-  height: 55px;
+  min-height: 55px;
   border-radius: 4px;
   overflow: hidden;
 }
@@ -897,7 +897,8 @@ template {
 
 .subscribe__button {
   position: absolute;
-  min-width: 65px;
+  width: 65px;
+  max-height: 100%;
   right: 0;
   top: 0;
   height: 100%;
@@ -937,7 +938,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 730px;
+  maxwidth: 730px;
   margin: 45px auto 0;
   padding: 0 62px 27px;
   background-color: #ffffff;
