--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -36,7 +36,7 @@
 .subscribe
     position: relative
     width: 351px
-    height: 55px
+    min-height: 55px
     border-radius: 4px
     overflow: hidden
     &__input
@@ -52,7 +52,8 @@
         line-height: 18px
     &__button
         position: absolute
-        min-width: 65px
+        width: 65px
+        max-height: 100%
         right: 0
         top: 0
         height: 100%
